# py-simputils-config

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: CHANGELOG.md  config-merging-strategies.md  config-object-style-access.md  disclaimers.md  overall-example.md  preprocessing-and-filtering.md  pydantic-integration.md  working-with-config-hub.md  working-with-config-store.md  working-with-enums-and-annotations.md
docs/schemes/: merging-strategies.drawio
examples/: example-config-from-argparser.py  example-config-from-env-vars.py  example-quick-configs.py
src/simputils/config/: __init__.py  base.py  types.py
src/simputils/config/components/: ConfigHub.py  __init__.py
src/simputils/config/enums/: ConfigStoreType.py  MergingStrategiesEnum.py  __init__.py
src/simputils/config/exceptions/: NoAvailableHandlers.py  NoFileHandlersSpecified.py  NoHandler.py  NotPermitted.py  StrictKeysEnabled.py  WrongFormat.py  __init__.py
src/simputils/config/generic/: BasicAppliedConf.py  BasicConditional.py  BasicConfigEnum.py  BasicConfigStore.py  BasicFileHandler.py  BasicMergingStrategy.py  BasicPreprocessor.py  __init__.py
src/simputils/config/models/: AnnotatedConfigData.py  AppliedConf.py  ConfigStore.py  __init__.py
tests/data/: config-1.yml  config-2.yml  config-3.json  config-4.env  pydantic-check.yml
tests/data/recursive/: adjustments.json  main-config.local.yaml  main-config.yaml  result.json
tests/fixtures/: fixture_flat_strategy_default.py  fixture_recursive_strategy_list_merge.py  fixture_recursive_strategy_list_replace.py  fixture_recursive_strategy_objects.py
tests/unit/: TestConfigStore.py  TestConfigStoreExtensions.py  TestConfigStoreThroughAggregate.py  TestExceptions.py  TestFileHandlers.py  TestImprovedConfigStore.py  TestMergingStrategies.py  TestPreprocessors.py
(+15 files in other folders)
